# rust_esp32_actix_postgresql

./: Cargo.toml  README.md  esp32.ino
src/: app_config.rs  lib.rs
src/databases/: db.rs
src/handlers/: data.rs  log_data.rs
src/models/: data.rs
src/repository/: data.rs  log_data.rs
